# rustbin

./: .gitignore  README.md  package.json  tsconfig.json  typedoc.json
.github/workflows/: rustbin.yml
docs/: index.html
docs/assets/: search.js
sh/: update-docs
src/: rustbin.ts
src/utils/: confirm.ts  fs.ts  index.ts  log.ts  parse-cargo-toml.ts  spawn-cmd.ts  version.ts
test/: rustbin.ts
test/fixtures/ah/program/: Cargo.toml
